--- a/src/styling/HomePage.css
+++ b/src/styling/HomePage.css
@@ -78,7 +78,7 @@
     margin: 100px 0 25px;
   }
 
-  .home-track-images {
+  .home-page .flow-images {
     max-width: 640px;
     max-height: 170px;
   }
@@ -107,11 +107,6 @@
 
   .home-track-titles {
     margin-top: 3rem;
-  }
-
-  .home-track-images {
-    max-width: 85%;
-    height: auto;
   }
 
   .home-track-body {
